[package]
name = "ampwatch"
version = "0.1.0"
edition = "2021"
description = "TUI monitor for amptown agents"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
glob = "0.3"

[[bin]]
name = "ampwatch"
path = "src/main.rs"

[dev-dependencies]
glob = "0.3"
